# agenttrace-sandbox

./: .gitignore  README.md  pyproject.toml
data/benchmarks/mbpp/: tasks.jsonl
data/benchmarks/mbpp/repos/mbpp_offline_square/tests/: test_solution.py
data/benchmarks/mbpp/repos/mbpp_offline_subtract/: AGENT.md  solution.py
data/corpus/: django_repair_corpus_clean.jsonl  django_repair_corpus_keep.jsonl
data/github/: django_bugfix_prs.jsonl
data/sft/: django_repair_sft.jsonl  django_repair_sft_diff_only.jsonl  django_repair_sft_full_new.jsonl  django_repair_sft_no_llm.jsonl  django_repair_sft_no_tests.jsonl  tool_calls.jsonl  tool_calls_alpaca.json
data/wiki/: django_enriched_repair_cards.jsonl  django_repair_cards.jsonl
docs/: INTERVIEW_QA_REPAIR_CORPUS_ZH.md  LEARNING_GUIDE_ZH.md  QWEN3_30B_A3B_5K_HQ_REPAIR_AB_RESULT_ZH.md  QWEN_1K_HQ_REPAIR_AB_RESULT_ZH.md  QWEN_5K_HQ_REPAIR_AB_RESULT_ZH.md  QWEN_AB_EVAL_DIAGNOSIS.md  QWEN_AB_TEST_HANDOFF.md  REAL_API_TRACE_NOTES.md  REPAIR_CORPUS_LORA_ABLATION_RESULTS_2026_05_21_ZH.md
examples/: pr_issue_pairs.jsonl  tasks.jsonl
examples/buggy_calculator/: calculator.py
examples/buggy_calculator/tests/: test_calculator.py
scripts/: build_pr_repair_experiment.py  run_qwen_ab_eval.py  run_second_stage_2k_experiment.sh  summarize_qwen_ab_eval.py  train_repair_corpus_lora.py
src/agenttrace_sandbox/: __init__.py  cli.py  config.py  data_builders.py  llm.py  manifest.py  runner.py  sandbox.py  sft_export.py  stats.py  tools.py  tracing.py
tests/: test_runner.py
(+1 files in other folders)
