[project]
name = "agenttrace-sandbox"
version = "0.1.0"
description = "A safe trajectory collection MVP for coding-agent post-training."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
benchmarks = ["datasets>=2.18.0"]
modelscope = ["modelscope>=1.20.0", "datasets>=2.18.0", "numpy>=1.24.0", "addict>=2.4.0"]

[project.scripts]
agenttrace = "agenttrace_sandbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
